--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/editar.xhtml
@@ -67,14 +67,15 @@
                     <p:commandButton value="Cancelar" immediate="true">
                         <p:ajax update="p1,archivo,fotoSubida" resetValues="true" listener="#{gestionarDocentesController.setIndexMenu(0)}"/>
                     </p:commandButton>
-                  <p:splitButton value="Otras Opciones" action="#">
-                        <p:menuitem value="Gestionar Docentes">    
+                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                   <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
+                        <p:menuitem value="Gestionar Docentes" >    
                         </p:menuitem>
                         <p:menuitem value="Gestionar Alumnos">    
                         </p:menuitem>
                         <p:menuitem value="Gestionar Cursos">    
                         </p:menuitem>
-                    </p:splitButton>    
+                    </p:tieredMenu>  
                             
                 </div>
             </h:form>
