--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseOnline/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseOnline/ver.xhtml
@@ -19,7 +19,7 @@
     <ui:define name="content">
         <div class="EmptyBox5"></div>
         <script>
-            var usuarioActual = '#{loginController.nombreCompleto}';
+            var usuarioActual = 'io#{loginController.nombreCompleto}';
             var transmitiendo = false;
             var connection;
             var ver = function () {
