--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpAlumnos.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpAlumnos.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-09-21T08:51:01 -->
+<!-- 2015-09-21T21:45:46 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptAlumnos" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
@@ -22,64 +22,68 @@
 	<background>
 		<band splitType="Stretch"/>
 	</background>
-	<title>
-		<band height="98" splitType="Stretch">
+	<pageHeader>
+		<band height="95">
+			<textField>
+				<reportElement x="194" y="75" width="100" height="19" uuid="2886470d-6648-4dcb-ab78-f866892f7ea4"/>
+				<textFieldExpression><![CDATA[$P{seccion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="194" y="55" width="100" height="20" uuid="f38db357-8e49-4f74-a18a-9f461fea6a26"/>
+				<textFieldExpression><![CDATA[$P{hasta}]]></textFieldExpression>
+			</textField>
 			<staticText>
-				<reportElement x="180" y="1" width="205" height="29" uuid="6380fbb6-acf1-4bc4-9e77-3c16f32331f2"/>
+				<reportElement x="148" y="54" width="46" height="20" uuid="fadeb030-a2b6-421d-a494-dbdf9870a574"/>
+				<text><![CDATA[Hasta:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="48" y="54" width="100" height="20" uuid="f4c1f246-549f-42ee-a5b2-7013c671003e"/>
+				<textFieldExpression><![CDATA[$P{desde}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="2" y="54" width="46" height="20" uuid="d0a03952-4734-427b-8671-3fe9db2adfb2"/>
+				<text><![CDATA[Desde:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="2" y="75" width="46" height="20" uuid="8919e137-d122-403e-8a54-15c232423bf2"/>
+				<text><![CDATA[Grado:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="48" y="75" width="100" height="20" uuid="0751badd-b546-45d6-8ab5-020d9902757a"/>
+				<textFieldExpression><![CDATA[$P{grado}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="148" y="75" width="46" height="20" uuid="5b485edf-a67c-4abe-96f7-7a3101d66cd3"/>
+				<text><![CDATA[Sección:]]></text>
+			</staticText>
+			<image>
+				<reportElement x="5" y="4" width="105" height="46" uuid="427887d9-eba9-4a22-8e97-9b0815a79610"/>
+				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement x="180" y="1" width="205" height="29" uuid="ddd7574d-454b-4bb3-9286-e49dad49ad59"/>
 				<textElement textAlignment="Center">
-					<font isBold="true"/>
+					<font size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Centro Escolar San Ramón
 Reporte de Alumnos]]></text>
 			</staticText>
-			<staticText>
-				<reportElement x="2" y="75" width="46" height="20" uuid="cf6c1449-eb70-46db-8031-53e3ab00778c"/>
-				<text><![CDATA[Grado:]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="148" y="75" width="46" height="20" uuid="22364d60-f8bb-47b5-abad-48aa925cae2f"/>
-				<text><![CDATA[Sección:]]></text>
-			</staticText>
 			<textField>
-				<reportElement x="48" y="75" width="100" height="20" uuid="8a6a66dd-1547-421b-ace8-f719cd598bdb"/>
-				<textFieldExpression><![CDATA[$P{grado}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="194" y="75" width="100" height="19" uuid="e5f1852c-6c38-492c-9851-e82d5255b9da"/>
-				<textFieldExpression><![CDATA[$P{seccion}]]></textFieldExpression>
-			</textField>
-			<textField evaluationTime="Report">
-				<reportElement x="386" y="10" width="164" height="30" uuid="f3075a9e-7660-48b2-a57d-4195504227e3"/>
+				<reportElement x="386" y="10" width="136" height="30" uuid="ceab85c5-6167-4de0-9e97-c1c56ca3fd0e"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA["Pág "+$V{PAGE_NUMBER}+" de "+$V{PAGE_COUNT}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Pág "+$V{PAGE_NUMBER}+" de "]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="382" y="53" width="164" height="20" uuid="8b9fa3e0-173f-4bf7-95c6-4a2d89a3f0d6"/>
+				<reportElement x="526" y="10" width="32" height="30" uuid="ffb1abfb-7cad-49e0-a992-854c96ce9d03"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="382" y="53" width="164" height="20" uuid="b09d4e25-976a-44ad-90b3-c0f0bbb1ec68"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["F. Generación:"+ $P{fechaGeneracion}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="194" y="55" width="100" height="20" uuid="c2b0b432-df3f-4be3-afec-15ee71a40ce7"/>
-				<textFieldExpression><![CDATA[$P{hasta}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="148" y="54" width="46" height="20" uuid="c093d5fa-20cb-448d-ac26-20a2b5db394d"/>
-				<text><![CDATA[Hasta:]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="48" y="54" width="100" height="20" uuid="a5626fbc-6374-4a26-b44a-b21643cbe12c"/>
-				<textFieldExpression><![CDATA[$P{desde}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="2" y="54" width="46" height="20" uuid="095bdecc-1bd2-44c3-9808-02e28b1b4df9"/>
-				<text><![CDATA[Desde:]]></text>
-			</staticText>
-			<image>
-				<reportElement x="5" y="4" width="105" height="46" uuid="afda423e-45cd-48cd-ab27-bd221c5e7414"/>
-				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
-			</image>
 		</band>
-	</title>
+	</pageHeader>
 	<columnHeader>
 		<band height="34" splitType="Stretch">
 			<staticText>
@@ -231,7 +235,7 @@ Reporte de Alumnos]]></text>
 		</band>
 	</detail>
 	<summary>
-		<band height="50">
+		<band height="77">
 			<textField>
 				<reportElement stretchType="RelativeToBandHeight" x="70" y="6" width="174" height="20" uuid="e38dca93-10bd-4fdc-b560-3298c47386c9"/>
 				<textFieldExpression><![CDATA["Total de Alumnos: "+ $V{REPORT_COUNT}]]></textFieldExpression>
