cambios pantalla subida notas excel

--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionNotas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionNotas/index.xhtml
@@ -60,6 +60,7 @@
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
                 <p:commandButton value="Adicionar Nota" actionListener="#{gestionNotaController.setIndexMenu(1)}"></p:commandButton>
+                <p:commandButton value="Cargar Notas desde Excel" actionListener="#{gestionNotaController.setIndexMenu(4)}"></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{gestionNotaController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
         </p:panel>
