--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpDocentes.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpDocentes.jrxml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-09-15T22:59:58 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptAlumnos" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
@@ -21,54 +19,62 @@
 	<background>
 		<band splitType="Stretch"/>
 	</background>
-	<title>
-		<band height="71" splitType="Stretch">
+	<pageHeader>
+		<band height="68">
 			<image>
-				<reportElement x="5" y="4" width="105" height="46" uuid="efe7bbf6-afb3-4970-a868-fac4475e6689"/>
+				<reportElement x="1" y="10" width="105" height="46" uuid="efe7bbf6-afb3-4970-a868-fac4475e6689"/>
 				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="4" y="50" width="40" height="20" uuid="8505d060-dbc4-422d-afcc-1c25c03e8c8c"/>
+				<reportElement x="112" y="45" width="40" height="20" uuid="8505d060-dbc4-422d-afcc-1c25c03e8c8c"/>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="178" y="51" width="100" height="20" uuid="d81dd0e1-a4d1-4ab8-8aca-47d446cc3555"/>
+				<reportElement x="286" y="45" width="100" height="20" uuid="d81dd0e1-a4d1-4ab8-8aca-47d446cc3555"/>
 				<textFieldExpression><![CDATA[$P{hasta}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="44" y="50" width="100" height="20" uuid="d108bdcd-fe91-4302-a088-bf3fda57b653"/>
+				<reportElement x="152" y="45" width="100" height="20" uuid="d108bdcd-fe91-4302-a088-bf3fda57b653"/>
 				<textFieldExpression><![CDATA[$P{desde}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="144" y="50" width="34" height="20" uuid="e5d279f2-6e18-4e6c-8118-05416760ef3f"/>
+				<reportElement x="252" y="45" width="34" height="20" uuid="e5d279f2-6e18-4e6c-8118-05416760ef3f"/>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="390" y="10" width="190" height="30" uuid="1e4b612b-c8c3-4167-9c37-15bb0c82c9e8"/>
+				<reportElement x="465" y="6" width="35" height="21" uuid="1e4b612b-c8c3-4167-9c37-15bb0c82c9e8"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA["Pág "+$V{PAGE_NUMBER}+" de "+$V{PAGE_COUNT}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Pág. "]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="388" y="40" width="190" height="23" uuid="a7c10adf-ee1c-4a29-82e3-0f130c54d3d9"/>
+				<reportElement x="413" y="45" width="87" height="23" uuid="a7c10adf-ee1c-4a29-82e3-0f130c54d3d9"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA["F. Generación:"+ $P{fechaGeneracion}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["F. Generación: "]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="180" y="1" width="205" height="19" uuid="cf65107c-e268-4b98-bc20-0a4ba7f5a9da"/>
+				<reportElement x="176" y="6" width="205" height="19" uuid="cf65107c-e268-4b98-bc20-0a4ba7f5a9da"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Centro Escolar San Ramón]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="180" y="20" width="205" height="19" uuid="55a9cbf3-4e74-48cd-9c04-5baa93094a9d"/>
+				<reportElement x="176" y="17" width="205" height="19" uuid="55a9cbf3-4e74-48cd-9c04-5baa93094a9d"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Reporte de Docentes]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="501" y="6" width="62" height="20" uuid="cb323b67-260f-4e7b-9867-2e89c34f6f90"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}+" de "+$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="501" y="45" width="62" height="20" uuid="8afc0e2a-8b0f-4f4c-a327-84fbb0a94dc3"/>
+				<textFieldExpression><![CDATA[$P{fechaGeneracion}]]></textFieldExpression>
+			</textField>
 		</band>
-	</title>
+	</pageHeader>
 	<columnHeader>
 		<band height="32" splitType="Stretch">
 			<staticText>
