--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpcursos.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpcursos.jrxml
@@ -20,62 +20,62 @@
 	<background>
 		<band splitType="Stretch"/>
 	</background>
-	<title>
-		<band height="71" splitType="Stretch">
+	<pageHeader>
+		<band height="62">
 			<image>
 				<reportElement x="5" y="4" width="105" height="46" uuid="efe7bbf6-afb3-4970-a868-fac4475e6689"/>
 				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="117" y="50" width="40" height="20" uuid="8505d060-dbc4-422d-afcc-1c25c03e8c8c"/>
+				<reportElement x="117" y="38" width="40" height="20" uuid="8505d060-dbc4-422d-afcc-1c25c03e8c8c"/>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="291" y="51" width="100" height="20" uuid="d81dd0e1-a4d1-4ab8-8aca-47d446cc3555"/>
+				<reportElement x="291" y="38" width="100" height="20" uuid="d81dd0e1-a4d1-4ab8-8aca-47d446cc3555"/>
 				<textFieldExpression><![CDATA[$P{hasta}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="157" y="50" width="100" height="20" uuid="d108bdcd-fe91-4302-a088-bf3fda57b653"/>
+				<reportElement x="157" y="38" width="100" height="20" uuid="d108bdcd-fe91-4302-a088-bf3fda57b653"/>
 				<textFieldExpression><![CDATA[$P{desde}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="257" y="50" width="34" height="20" uuid="e5d279f2-6e18-4e6c-8118-05416760ef3f"/>
+				<reportElement x="257" y="38" width="34" height="20" uuid="e5d279f2-6e18-4e6c-8118-05416760ef3f"/>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="418" y="20" width="72" height="19" uuid="1e4b612b-c8c3-4167-9c37-15bb0c82c9e8"/>
+				<reportElement x="418" y="4" width="72" height="19" uuid="1e4b612b-c8c3-4167-9c37-15bb0c82c9e8"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Pág. "]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="400" y="39" width="90" height="23" uuid="a7c10adf-ee1c-4a29-82e3-0f130c54d3d9"/>
+				<reportElement x="400" y="38" width="90" height="23" uuid="a7c10adf-ee1c-4a29-82e3-0f130c54d3d9"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["F. Generación:  "]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="180" y="1" width="205" height="19" uuid="cf65107c-e268-4b98-bc20-0a4ba7f5a9da"/>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[Centro Escolar San Ramón]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="180" y="20" width="205" height="19" uuid="55a9cbf3-4e74-48cd-9c04-5baa93094a9d"/>
+				<reportElement x="186" y="14" width="205" height="19" uuid="55a9cbf3-4e74-48cd-9c04-5baa93094a9d"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Reporte de Cursos]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="492" y="39" width="80" height="20" uuid="c0b2a79c-497b-4183-9e20-6234dc35293d"/>
+				<reportElement x="492" y="38" width="80" height="20" uuid="c0b2a79c-497b-4183-9e20-6234dc35293d"/>
 				<textFieldExpression><![CDATA[$P{fechaGeneracion}]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="492" y="19" width="80" height="20" uuid="c8be72e0-fd1a-4255-bc3a-86cd4d90e1f8"/>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}+" de "+$V{PAGE_COUNT}]]></textFieldExpression>
+				<reportElement x="492" y="4" width="80" height="20" uuid="c8be72e0-fd1a-4255-bc3a-86cd4d90e1f8"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}+" de "+$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="186" y="4" width="205" height="19" uuid="cf65107c-e268-4b98-bc20-0a4ba7f5a9da"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Centro Escolar San Ramón]]></text>
+			</staticText>
 		</band>
-	</title>
+	</pageHeader>
 	<columnHeader>
 		<band height="32" splitType="Stretch">
 			<staticText>
@@ -102,7 +102,7 @@
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
-				<text><![CDATA[Cap.]]></text>
+				<text><![CDATA[Capacidad]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="214" y="2" width="155" height="30" uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623"/>
@@ -233,12 +233,7 @@
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="36" splitType="Stretch">
-			<textField>
-				<reportElement x="487" y="8" width="100" height="20" uuid="382a7210-3f3f-40e8-8ec6-f85f63df03eb"/>
-				<textFieldExpression><![CDATA[$F{materia}]]></textFieldExpression>
-			</textField>
-		</band>
+		<band height="36" splitType="Stretch"/>
 	</pageFooter>
 	<lastPageFooter>
 		<band height="50"/>
